--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/main.css">
-<title>Marvel Character Build</title>
+<title>Kardashian Character Build</title>
 </head>
 <body>
 <header>
