Updated sprite and css
Updated spritesheet and css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
 <h1 class="hidden">All About the Team</h1>
-<img src="images/logo.svg" alt="marvel logo" id="main-logo">
+<img src="images/kardashian_logo.png" alt="kardashian logo" id="main-logo">
 </header>
 
 <main>
@@ -16,48 +16,48 @@
         <ul class="characters">
             <li>
             <a href="#lightbox">
-                <div class="sprite" id="cap"></div>
-                <h5>Captain America</h5>
+                <div class="sprite" id="kim"></div>
+                <h5>Kim Kardashian</h5>
             </a>
 <!-- <img src="images/cap.jpeg" alt="captain america"> -->
             </li>
 
             <li>
             <a href="#lightbox">
-                <div class="sprite" id="carol"></div>
-                <h5>Captain Marvel</h5>
+                <div class="sprite" id="kourtney"></div>
+                <h5>Kourtney Kardashian</h5>
             </a>
-    <!-- <img src="images/carol.jpeg" alt="captain marvel"> -->
+    <!-- <img src="images/carol.jpeg" alt="captain kardashian"> -->
             </li>
 
             <li>
             <a href="#lightbox">
-                 <div class="sprite" id="clint"></div>
-                <h5>Hawkeye</h5>
+                 <div class="sprite" id="kris"></div>
+                <h5>Kris Jenner</h5>
              </a>
     <!-- <img src="images/clint.jpeg" alt="hawkeye"> -->
     </li>
 
             <li>
                 <a href="#lightbox">
-                    <div class="sprite" id="hulk"></div>
-                    <h5>Hulk</h5>
+                    <div class="sprite" id="khloe"></div>
+                    <h5>Khloe Kardashian</h5>
                 </a>
             <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
             </li>
 
             <li>
                 <a href="#lightbox2">
-                    <div class="sprite" id="thor"></div>
-                    <h5>Thor</h5>
+                    <div class="sprite" id="kendall"></div>
+                    <h5>Kendall Jenner</h5>
                 </a>
             <!-- <img src="images/thor.jpeg" alt="thor"> -->
             </li>
 
             <li>
                 <a href="#lightbox">
-                    <div class="sprite" id="widow"></div>
-                    <h5>Black Widow</h5>
+                    <div class="sprite" id="kylie"></div>
+                    <h5>Kylie Jenner</h5>
                 </a>
             <!-- <img src="images/widow.jpeg" alt="black widow"> -->
             </li>
@@ -65,13 +65,13 @@
     </nav>
 
 <section id="instructions">
-<h3>Choose your hero!</h3>
-<p>Use your mouse to hover / click to discover more about each Marvel hero</p>
+<h3>Choose your Kardashian/Jenner!</h3>
+<p>Use your mouse to hover / click to discover more about each kardashian/jenner hero</p>
 </section>
 </main>
 
 <footer class="sticky_footer">
-<h3>All Images &copy; Marvel</h3>
+<h3>All Images &copy; kardashian</h3>
 </footer>
 
 
