HTML and CSS update
Messed everything up somehow and had to redo the css and html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/main.css">
-<title>Marvel Character Build</title>
+<title>kardashian Character Build</title>
 </head>
 <body>
 <header>
 <h1 class="hidden">All About the Team</h1>
-<img src="images/logo.svg" alt="marvel logo" id="main-logo">
+<img src="images/logo.svg" alt="kardashian logo" id="main-logo">
 </header>
 
 <main>
@@ -16,62 +16,62 @@
         <ul class="characters">
             <li>
             <a href="#lightbox">
-                <div class="sprite" id="cap"></div>
-                <h5>Captain America</h5>
+                <div class="sprite" id="kim"></div>
+                <h5>Kim Kardashian</h5>
             </a>
-<!-- <img src="images/cap.jpeg" alt="captain america"> -->
+<!-- <img src="images/kim.jpeg" alt="kimtain america"> -->
             </li>
 
             <li>
             <a href="#lightbox">
-                <div class="sprite" id="carol"></div>
-                <h5>Captain Marvel</h5>
+                <div class="sprite" id="kourtney"></div>
+                <h5>Kourtney Kardashian</h5>
             </a>
-    <!-- <img src="images/carol.jpeg" alt="captain marvel"> -->
+    <!-- <img src="images/kourtney.jpeg" alt="kimtain kardashian"> -->
             </li>
 
             <li>
             <a href="#lightbox">
-                 <div class="sprite" id="clint"></div>
-                <h5>Hawkeye</h5>
+                 <div class="sprite" id="kris"></div>
+                <h5>Kris Jenner</h5>
              </a>
-    <!-- <img src="images/clint.jpeg" alt="hawkeye"> -->
+    <!-- <img src="images/clint.jpeg" alt="kris"> -->
     </li>
 
             <li>
                 <a href="#lightbox">
-                    <div class="sprite" id="hulk"></div>
-                    <h5>Hulk</h5>
+                    <div class="sprite" id="khloe"></div>
+                    <h5>Khloe Kardashian</h5>
                 </a>
-            <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
+            <!-- <img src="images/khloe.jpeg" alt="khloe"> -->
             </li>
 
             <li>
                 <a href="#lightbox2">
-                    <div class="sprite" id="thor"></div>
-                    <h5>Thor</h5>
+                    <div class="sprite" id="kendall"></div>
+                    <h5>Kendall Jenner</h5>
                 </a>
-            <!-- <img src="images/thor.jpeg" alt="thor"> -->
+            <!-- <img src="images/kendall.jpeg" alt="kendall"> -->
             </li>
 
             <li>
                 <a href="#lightbox">
-                    <div class="sprite" id="widow"></div>
-                    <h5>Black Widow</h5>
+                    <div class="sprite" id="kylie"></div>
+                    <h5>Kylie Jenner</h5>
                 </a>
-            <!-- <img src="images/widow.jpeg" alt="black widow"> -->
+            <!-- <img src="images/kylie.jpeg" alt="black kylie"> -->
             </li>
     </ul>
     </nav>
 
 <section id="instructions">
 <h3>Choose your hero!</h3>
-<p>Use your mouse to hover / click to discover more about each Marvel hero</p>
+<p>Use your mouse to hover / click to discover more about each kardashian hero</p>
 </section>
 </main>
 
 <footer class="sticky_footer">
-<h3>All Images &copy; Marvel</h3>
+<h3>All Images &copy; kardashian</h3>
 </footer>
 
 
@@ -80,7 +80,7 @@
 <a href="" class="lightbox_close">x</a>
 
 <article>
-<h3 class="lb_heading">Captain America - The First Avenger</h3>
+<h3 class="lb_heading">kimtain America - The First Avenger</h3>
 
 <p class="lb_text">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio distinctio praesentium numquam quo quisquam sit vitae sed possimus animi harum nihil eum, ut rem sint. Omnis id natus asperiores blanditiis!
@@ -96,7 +96,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione eos bl
 <a href="" class="lightbox_close">x</a>
 
 <article>
-<h3 class="lb_heading">Thor Odinson - The Asgardian</h3>
+<h3 class="lb_heading">kendall Odinson - The Asgardian</h3>
 
 <p class="lb_text">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio distinctio praesentium numquam quo quisquam sit vitae sed possimus animi harum nihil eum, ut rem sint. Omnis id natus asperiores blanditiis!
